--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,9 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-body {
-    font-family: "Inter", sans-serif;
+@font-face {
+    font-family: Franklin;
+    font-display: swap;
+    src: url("../assets/fonts/Franklin.ttf") format("ttf"), url("../assets/fonts/Franklin.woff2") format("woff2"), url("../assets/fonts/Franklin.woff") format("woff");
+    font-weight: 400;
+    font-style: normal;
 }
+
+body {
+    font-family: "Franklin", sans-serif;
+}
+
